--- a/app/src/main/res/layout/fragment_map_home_page.xml
+++ b/app/src/main/res/layout/fragment_map_home_page.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,10 +10,13 @@
     >
 
     <LinearLayout
+        android:id="@+id/navBar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/gray"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
             android:id="@+id/home"
@@ -35,26 +39,133 @@
             android:layout_width="30dp"
             android:layout_height="match_parent"
             android:layout_marginStart="20dp"
-            android:src="@drawable/profile"
-            android:background="@android:color/transparent"/>
+            android:background="@android:color/transparent"
+            android:src="@drawable/profile" />
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/background"
-        android:layout_width="fill_parent"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/background" />
+        android:layout_marginTop="50dp">
+        <ImageView
+            android:id="@+id/background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/background"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/hsc"
+            android:layout_width="36dp"
+            android:layout_height="46dp"
+            android:background="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="@+id/background"
+            app:layout_constraintEnd_toEndOf="@+id/background"
+            app:layout_constraintHorizontal_bias="0.725"
+            app:layout_constraintStart_toStartOf="@+id/background"
+            app:layout_constraintTop_toTopOf="@+id/background"
+            app:layout_constraintVertical_bias="0.85" />
+
+        <View
+            android:id="@+id/village"
+            android:layout_width="30dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="285dp"
+            android:layout_marginTop="215dp"
+            android:background="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="@+id/background"
+            app:layout_constraintEnd_toEndOf="@+id/background"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/background"
+            app:layout_constraintTop_toTopOf="@+id/background"
+            app:layout_constraintVertical_bias="0.028" />
+
+        <View
+            android:id="@+id/lyon"
+            android:layout_width="38dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="125dp"
+            android:layout_marginTop="260dp"
+            android:background="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="@+id/background"
+            app:layout_constraintEnd_toEndOf="@+id/background"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/background"
+            app:layout_constraintTop_toTopOf="@+id/background"
+            app:layout_constraintVertical_bias="0.045" />
+
+        <View
+            android:id="@+id/racquetball"
+            android:layout_width="30dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="92dp"
+            android:layout_marginTop="230dp"
+            android:background="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="@+id/background"
+            app:layout_constraintEnd_toEndOf="@+id/background"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/background"
+            app:layout_constraintTop_toTopOf="@+id/background"
+            app:layout_constraintVertical_bias="0.028" />
+
+        <View
+            android:id="@+id/uac"
+            android:layout_width="30dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="95dp"
+            android:layout_marginTop="292dp"
+            android:background="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="@+id/background"
+            app:layout_constraintEnd_toEndOf="@+id/background"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/background"
+            app:layout_constraintTop_toTopOf="@+id/background"
+            app:layout_constraintVertical_bias="0.028" />
+
+        <View
+            android:id="@+id/track"
+            android:layout_width="30dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="140dp"
+            android:layout_marginTop="470dp"
+            android:background="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="@+id/background"
+            app:layout_constraintEnd_toEndOf="@+id/background"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/background"
+            app:layout_constraintTop_toTopOf="@+id/background"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <View
+            android:id="@+id/idto1"
+            android:layout_width="5dp"
+            android:layout_height="5dp"
+            android:layout_marginLeft="250dp"
+            android:layout_marginTop="75dp"
+            android:background="@android:color/transparent" />
+
+        <View
+            android:id="@+id/idto2"
+            android:layout_width="5dp"
+            android:layout_height="5dp"
+            android:layout_marginLeft="300dp"
+            android:layout_marginTop="75dp"
+            android:background="@android:color/transparent" />
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@color/gray">
+        android:background="@color/gray"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/navBar">
 
         <ScrollView
             android:id="@+id/scrollView4"
@@ -91,68 +202,4 @@
 
     </RelativeLayout>
 
-    <View
-        android:id="@+id/hsc"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="270dp"
-        android:layout_marginTop="490dp"
-        android:background="@android:color/transparent" />
-
-    <View
-        android:id="@+id/village"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="285dp"
-        android:layout_marginTop="215dp"
-        android:background="@android:color/transparent" />
-
-    <View
-        android:id="@+id/lyon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="125dp"
-        android:layout_marginTop="260dp"
-        android:background="@android:color/transparent" />
-
-    <View
-        android:id="@+id/racquetball"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="92dp"
-        android:layout_marginTop="240dp"
-        android:background="@android:color/transparent" />
-
-    <View
-        android:id="@+id/uac"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="95dp"
-        android:layout_marginTop="280dp"
-        android:background="@android:color/transparent" />
-
-    <View
-        android:id="@+id/track"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="140dp"
-        android:layout_marginTop="455dp"
-        android:background="@android:color/transparent" />
-
-    <View
-        android:id="@+id/idto1"
-        android:layout_width="5dp"
-        android:layout_height="5dp"
-        android:layout_marginLeft="250dp"
-        android:layout_marginTop="75dp"
-        android:background="@android:color/transparent" />
-
-    <View
-        android:id="@+id/idto2"
-        android:layout_width="5dp"
-        android:layout_height="5dp"
-        android:layout_marginLeft="300dp"
-        android:layout_marginTop="75dp"
-        android:background="@android:color/transparent" />
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
