--- a/app/src/main/res/layout/fragment_map_home_page.xml
+++ b/app/src/main/res/layout/fragment_map_home_page.xml
@@ -43,10 +43,11 @@
             android:src="@drawable/profile" />
     </LinearLayout>
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp">
+
         <ImageView
             android:id="@+id/background"
             android:layout_width="match_parent"
@@ -63,80 +64,69 @@
             android:background="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            app:layout_constraintHorizontal_bias="0.725"
+            app:layout_constraintHorizontal_bias="0.714"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toTopOf="@+id/background"
-            app:layout_constraintVertical_bias="0.85" />
+            app:layout_constraintVertical_bias="0.844" />
 
         <View
             android:id="@+id/village"
             android:layout_width="30dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="285dp"
-            android:layout_marginTop="215dp"
             android:background="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.75"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toTopOf="@+id/background"
-            app:layout_constraintVertical_bias="0.028" />
+            app:layout_constraintVertical_bias="0.375" />
 
         <View
             android:id="@+id/lyon"
             android:layout_width="38dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="125dp"
-            android:layout_marginTop="260dp"
             android:background="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.34"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toTopOf="@+id/background"
-            app:layout_constraintVertical_bias="0.045" />
+            app:layout_constraintVertical_bias="0.454" />
 
         <View
             android:id="@+id/racquetball"
             android:layout_width="30dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="92dp"
-            android:layout_marginTop="230dp"
             android:background="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.246"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toTopOf="@+id/background"
-            app:layout_constraintVertical_bias="0.028" />
+            app:layout_constraintVertical_bias="0.409" />
 
         <View
             android:id="@+id/uac"
             android:layout_width="30dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="95dp"
-            android:layout_marginTop="292dp"
             android:background="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.246"
             app:layout_constraintStart_toStartOf="@+id/background"
-            app:layout_constraintTop_toTopOf="@+id/background"
-            app:layout_constraintVertical_bias="0.028" />
+            app:layout_constraintTop_toTopOf="@+id/background" />
 
         <View
             android:id="@+id/track"
             android:layout_width="30dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="140dp"
-            android:layout_marginTop="470dp"
             android:background="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.367"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toTopOf="@+id/background"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.787" />
 
         <View
             android:id="@+id/idto1"
@@ -154,7 +144,7 @@
             android:layout_marginTop="75dp"
             android:background="@android:color/transparent" />
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <RelativeLayout
         android:layout_width="200dp"
@@ -187,8 +177,8 @@
                     android:id="@+id/upcomingReservations"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
                     android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
                     android:drawableRight="@drawable/arrow"
                     android:drawablePadding="5dp"
                     android:text="Upcoming Reservations"
