--- a/app/src/main/res/layout/fragment_reccenter.xml
+++ b/app/src/main/res/layout/fragment_reccenter.xml
@@ -101,7 +101,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="280dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
